monitoring/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  tls:
    - secretName: tls-ingress
      hosts:
        - grafana.k8s.example.com
  rules:
    - host: grafana.k8s.example.com
      http:
        paths:
          - backend:
              serviceName: monitoring-grafana
              servicePort: 80
